--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.4
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
