--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.4
   url_launcher: ^6.1.10
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
