--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,12 +93,12 @@ BEGIN
 BEGIN
         VALUE
 "CompanyName", "dev.logickoder" "\0"
-VALUE "FileDescription", "hospital_link_up_ui" "\0"
+VALUE "FileDescription", "hospital_app_link_up_ui" "\0"
 VALUE "FileVersion", VERSION_AS_STRING "\0"
-VALUE "InternalName", "hospital_link_up_ui" "\0"
+VALUE "InternalName", "hospital_app_link_up_ui" "\0"
 VALUE "LegalCopyright", "Copyright (C) 2023 dev.logickoder. All rights reserved." "\0"
-VALUE "OriginalFilename", "hospital_link_up_ui.exe" "\0"
-VALUE "ProductName", "hospital_link_up_ui" "\0"
+VALUE "OriginalFilename", "hospital_app_link_up_ui.exe" "\0"
+VALUE "ProductName", "hospital_app_link_up_ui" "\0"
 VALUE "ProductVersion", VERSION_AS_STRING "\0"
 END
         END
